--- a/Card Game/index.html
+++ b/Card Game/index.html
@@ -1,24 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <link href="style.css" rel="stylesheet">
+  <title>Playing Cards</title>
 </head>
-<body>
-    <div class="container">
-  <h1>Card Game</h1>
-  <div class="game">
-    <p id="card">0</p>
-    <p id="total">Total: 0</p>
-    <p id="message"></p>
-    <button id="addCard">Add Card</button>
-    <button id="newGame">New Game</button>
-  </div>
-</div>
-<script src="app.js"></script>
 
+<body>
+  
+  <h1>Card Game</h1>
+  <p id="message-el">Would you like to play a game????</p>
+  <p id="cards-el">Cards:</p>
+  <p id="sum-el">Sum:</p>
+  <div class="card inactive" id="card1"></div>
+  <div class="card inactive" id="card2"></div>
+  <div class="card inactive" id="card3"></div>
+  <div class="card inactive" id="card4"></div>
+  <div class="card inactive" id="card5"></div>
+  <div class="card inactive" id="card6"></div>
+  <div class="card inactive" id="card7"></div>
+  <div class="card inactive" id="card8"></div>
+  <div class="card inactive" id="card9"></div>
+  <div class="card inactive" id="card10"></div>
+  <div class="card inactive" id="card11"></div>
+  <div class="card inactive" id="card12"></div>
+  <div class="buttons">
+      <button onclick="startGame()" class="heroBtn">START GAME</button>
+      <button onclick="newCard()" class="heroBtn">NEW CARD</button>
+      <button onclick="newGame()" class="heroBtn">NEW GAME</button>
+  </div>
+  <p id="player-el"></p>
+  <script src="app.js"></script>
 </body>
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
